--- a/app/assets/stylesheets/mixins/_box-sizing.scss
+++ b/app/assets/stylesheets/mixins/_box-sizing.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@if $border-box-sizing == true {
+@mixin box-sizing {
   html { // http://bit.ly/1qk2tVR
     box-sizing: border-box;
   }
